fix(comments): align toggles with margin notes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,10 +14,13 @@
 .header-anchor,
 .section-comments-toggle {
   margin-left: 0.3rem;
-  font-size: 0.75em;
+  font-size: 0.7em;
   line-height: 1;
-  opacity: 0;
   text-decoration: none;
+}
+
+.header-anchor {
+  opacity: 0;
 }
 
 .section-comments-toggle {
@@ -28,7 +31,13 @@
   background: transparent;
   color: inherit;
   cursor: pointer;
+  display: inline-block;
   font-family: inherit;
+  opacity: 0.55;
+  position: relative;
+  text-shadow: 0.03em 0 #fffff8, -0.03em 0 #fffff8, 0 0.03em #fffff8, 0 -0.03em #fffff8;
+  top: -0.08em;
+  vertical-align: baseline;
 }
 
 h1:hover .header-anchor,
@@ -81,14 +90,14 @@ h6:hover .section-comments-toggle,
   margin-top: 0.5rem;
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 761px) {
   body {
     width: 75%;
     padding-left: 25%;
   }
 }
 
-@media (max-width: 1099px) {
+@media (max-width: 760px) {
   .section-comments {
     display: block;
     float: left;
